tests/ui/error-codes/E0004.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/E0004.rs:9:11
   |
LL |     match x {
   |           ^ pattern `Terminator::HastaLaVistaBaby` not covered
   |
note: `Terminator` defined here
  --> $DIR/E0004.rs:1:6
   |
LL | enum Terminator {
   |      ^^^^^^^^^^
LL |     HastaLaVistaBaby,
   |     ---------------- not covered
   = note: the matched value is of type `Terminator`
help: ensure that all possible cases are being handled by adding an arm to handle the `Terminator::HastaLaVistaBaby` case
   |
LL ~         Terminator::TalkToMyHand => {},
LL +         Terminator::HastaLaVistaBaby => { todo!() },
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
